Move deploy to pipeline, try e2e with more time

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,4 +31,17 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
-          wait-on: http://localhost:5000
+           with:
+          config: pageLoadTimeout=100000,baseUrl=http://localhost:5000
+
+      if: ${{ github.event_name == 'push' }}
+      - name: deploy
+        uses: actions/checkout@v2
+        uses: akhileshns/heroku-deploy@v3.8.9
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "muikku-pokedex"
+          heroku_email: "markus.muinonen@gmail.com"
+          healthcheck: "https://muikku-pokedex.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
