--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
-          config: pageLoadTimeout=100000,baseUrl=http://localhost:5000
+          wait-on: http://localhost:5000
+          wait-on-timeout: 120
 
       if: ${{ github.event_name == 'push' }}
       - name: deploy
