--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run --config pageLoadTimeout=120000,baseUrl=http://localhost:5000"
   },
   "repository": {
     "type": "git",
