Trying different waits

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,8 +30,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           start: npm run start-prod
-          wait-on: http://localhost:5000
-          wait-on-timeout: 360000
+          wait-on: 'npx wait-on --timeout 105000 http://localhost:5000'
           command: npm run test:e2e
 
       - name: deploy
